update count and total working

--- a/project-02/index.html
+++ b/project-02/index.html
@@ -12,10 +12,10 @@
       <label>Select a Movie:</label>
       <select id="movie">
         <option value="Select a movie">Select a Movie</option>
-        <option value="$15">Wonder Women 1984</option>
-        <option value="$10">Avenger: Endgame</option>
-        <option value="$12">Joker</option>
-        <option value="$8">Toy Story 4</option>
+        <option value="15">Wonder Women 1984</option>
+        <option value="10">Avenger: Endgame</option>
+        <option value="12">Joker</option>
+        <option value="8">Toy Story 4</option>
       </select>
     </div>
 
