--- a/project-02/index.html
+++ b/project-02/index.html
@@ -105,6 +105,7 @@
         >0</span
       >
     </p>
+    <!-- <script src="script.js"></script> -->
     <script src="script.js"></script>
   </body>
 </html>
