--- a/project-03/index.html
+++ b/project-03/index.html
@@ -14,7 +14,7 @@
   <body>
     <h1>My Video Player</h1>
     <video
-      src="./videos/gone.mp4"
+      src="./videos/016 Project Intro.mp4"
       class="screen"
       poster="./img/poster.png"
       id="video"
@@ -38,5 +38,6 @@
       />
       <span class="timestamp" id="timestamp">00:00</span>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
