exchange rate calclator completed

--- a/project-04/index.html
+++ b/project-04/index.html
@@ -73,11 +73,12 @@
       <!-- swap buttoh -->
       <div class="swap-container">
         <button class="btn" id="swap">swap</button>
+        <div class="rate" id="rate"></div>
       </div>
 
       <!-- currency 02 -->
       <div class="currency">
-        <select id="currency-1">
+        <select id="currency-2">
           <option value="AED">AED</option>
           <option value="ARS">ARS</option>
           <option value="AUD">AUD</option>
@@ -131,10 +132,10 @@
           <option value="VND">VND</option>
           <option value="ZAR">ZAR</option>
         </select>
-        <input type="number" id="amount-one" placeholder="0" value="1" />
+        <input type="number" id="amount-two" placeholder="0" value="1" />
       </div>
     </div>
 
-    <link rel="stylesheet" href="./script.js" />
+    <script src="./script.js"></script>
   </body>
 </html>
