--- a/project-06_Modal_Menu_Slider/index.html
+++ b/project-06_Modal_Menu_Slider/index.html
@@ -87,7 +87,7 @@
       </p>
     </div>
     <!-- Modal -->
-    <div class="modal-container show-modal" id="modal">
+    <div class="modal-container" id="modal">
       <div class="modal">
         <button class="close-btn" id="closse">
           <i class="fa fa-times"></i>
