completed Modal slider landing page

--- a/project-06_Modal_Menu_Slider/index.html
+++ b/project-06_Modal_Menu_Slider/index.html
@@ -41,7 +41,7 @@
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae,
         laudantium.
       </p>
-      <button id="cta-btn" class="open">Sign Up</button>
+      <button id="open" class="open">Sign Up</button>
     </header>
 
     <!-- section -->
@@ -89,7 +89,7 @@
     <!-- Modal -->
     <div class="modal-container" id="modal">
       <div class="modal">
-        <button class="close-btn" id="closse">
+        <button class="close-btn" id="close">
           <i class="fa fa-times"></i>
         </button>
         <div class="modal-header">
@@ -142,5 +142,6 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
