--- a/project-06_Modal_Menu_Slider/index.html
+++ b/project-06_Modal_Menu_Slider/index.html
@@ -98,7 +98,7 @@
         <div class="modal-content">
           <p>Register with us to get offers, support and more</p>
 
-          <form class="modal-form">
+          <!-- <form class="modal-form">
             <div>
               <label for="name">Name</label>
               <input
@@ -136,7 +136,40 @@
               />
             </div>
             <input type="submit" value="submit" class="submit-btn" />
-          </form>
+          </form> -->
+          <div class="form-container">
+            <form id="form" class="form">
+              <div class="form-control">
+                <label for="username">Username</label>
+                <input type="text" id="username" placeholder="Enter username" />
+                <small>Error message</small>
+              </div>
+              <div class="form-control">
+                <label for="email">Email</label>
+                <input type="text" id="email" placeholder="Enter email" />
+                <small>Error message</small>
+              </div>
+              <div class="form-control">
+                <label for="password">Password</label>
+                <input
+                  type="password"
+                  id="password"
+                  placeholder="Enter password"
+                />
+                <small>Error message</small>
+              </div>
+              <div class="form-control">
+                <label for="password2">Cofirm Password</label>
+                <input
+                  type="password"
+                  id="password2"
+                  placeholder="Enter password again"
+                />
+                <small>Error message</small>
+              </div>
+              <button>Submit</button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
