--- a/project-08_Meal_finder/index.html
+++ b/project-08_Meal_finder/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Meal Finder</title>
   </head>
   <body>
@@ -63,8 +67,26 @@
         <div class="image">
           <img src="./images/pancakes.jpg" alt="" width="100%" />
         </div>
-        <div class="search-bar" id="search"></div>
-        <div class="random" id="random"></div>
+        <div class="search-container">
+          <div class="search-bar" id="search">
+            <div class="input">
+              <input type="text" placeholder="Search meal here" />
+            </div>
+            <span style="color: rgb(107, 107, 107)">
+              <a href="">
+                <i class="fa fa-search fa-2x"></i>
+              </a>
+            </span>
+            <!-- Random button -->
+          </div>
+          <div class="random" id="random">
+            <span style="color: rgb(107, 107, 107)">
+              <a href="">
+                <i class="fa fa-random fa-2x"></i>
+              </a>
+            </span>
+          </div>
+        </div>
       </div>
     </div>
   </body>
