Finally UI completed

--- a/project-08_Meal_finder/index.html
+++ b/project-08_Meal_finder/index.html
@@ -11,6 +11,9 @@
     <title>Meal Finder</title>
   </head>
   <body>
+    <nav class="hamburger">
+      <i class="fa fa-bars fa-2x" style="color: white"></i>
+    </nav>
     <nav>
       <div class="navigation">
         <div class="logo">
@@ -72,15 +75,15 @@
             <div class="input">
               <input type="text" placeholder="Search meal here" />
             </div>
-            <span style="color: rgb(107, 107, 107)">
-              <a href="">
+            <span>
+              <a href="#">
                 <i class="fa fa-search fa-2x"></i>
               </a>
             </span>
             <!-- Random button -->
           </div>
           <div class="random" id="random">
-            <span style="color: rgb(107, 107, 107)">
+            <span>
               <a href="">
                 <i class="fa fa-random fa-2x"></i>
               </a>
