search | recipe | ingredients added to DOM dynamically

--- a/project-08_Meal_finder/index.html
+++ b/project-08_Meal_finder/index.html
@@ -54,7 +54,7 @@
         </article>
         <div class="ingredients" id="ingredients">
           <h2>ingredients</h2>
-          <div class="tags">
+          <div class="tags" id="tags">
             <p id="ingreds">Onions</p>
             <p id="ingreds">Onions</p>
             <p id="ingreds">cheese</p>
