--- a/project-08_Meal_finder/index.html
+++ b/project-08_Meal_finder/index.html
@@ -89,8 +89,8 @@
           </div>
           <div class="random" id="random">
             <span>
-              <button id="random">
-                <a href="">
+              <button id="random-btn">
+                <a href="#">
                   <i class="fa fa-random fa-2x"></i>
                 </a>
               </button>
