--- a/project-09_Expense_tracker/index.html
+++ b/project-09_Expense_tracker/index.html
@@ -10,7 +10,7 @@
     <h2>Expense Tracker</h2>
     <div class="container">
       <h4>Your Balance</h4>
-      <h1 id="balance"$0.00</h1>
+      <h1 id="balance">$0.00</h1>
 
       <div class="inc-exp-container">
         <div>
