expense tracker completed final

--- a/project-09_Expense_tracker/index.html
+++ b/project-09_Expense_tracker/index.html
@@ -23,11 +23,14 @@
         </div>
       </div>
       <h3>History</h3>
-      <ul class="list" id="list">
-        <li class="plus">
-          Camera <span>$0.00</span> <button class="delete-btn">X</button>
-        </li>
-      </ul>
+      <!-- income list here -->
+      <div class="history">
+        <ul class="list" id="list">
+          <li class="plus">
+            Camera <span>$0.00</span> <button class="delete-btn">X</button>
+          </li>
+        </ul>
+      </div>
 
       <h3>Add new transaction</h3>
       <!-- input form start -->
